WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47455
[Qt] Compile fails when building qtwebkit with the "--v8" option...
https://bugs.webkit.org/show_bug.cgi?id=47455
Summary
[Qt] Compile fails when building qtwebkit with the "--v8" option...
Dawit A.
Reported
2010-10-09 13:07:18 PDT
Because of the following #include sequence in the generated webkit v8 source files: V8Proxy.h -> PlatformBridge.h -> npapi.h -> Xlib.h -> X.h That sequence leads to the word "None" being defined as #ifndef None #define None 0L /* universal null resource or null atom */ #endif in X.h. Unfortunately that leads to the "None" in "v8::None" enum values being changed to v8::0L by the gcc preprocessor...
Attachments
Proposed patch to fix compile issue...
(923 bytes, patch)
2010-10-09 13:09 PDT
,
Dawit A.
kling
: review-
Details
Formatted Diff
Diff
Proposed patch [Update 1]...
(1.02 KB, patch)
2010-10-09 13:20 PDT
,
Dawit A.
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dawit A.
Comment 1
2010-10-09 13:09:29 PDT
Created
attachment 70366
[details]
Proposed patch to fix compile issue...
Andreas Kling
Comment 2
2010-10-09 13:20:44 PDT
Comment on
attachment 70366
[details]
Proposed patch to fix compile issue... View in context:
https://bugs.webkit.org/attachment.cgi?id=70366&action=review
> WebCore/platform/qt/PlatformBridge.h:80 > class NPObject; > +class NPP;
Snag this from ChromiumBridge.h instead: typedef struct NPObject NPObject; typedef struct _NPP NPP_t; typedef NPP_t* NPP;
Dawit A.
Comment 3
2010-10-09 13:20:48 PDT
Created
attachment 70368
[details]
Proposed patch [Update 1]...
Andreas Kling
Comment 4
2010-10-09 13:24:09 PDT
Comment on
attachment 70368
[details]
Proposed patch [Update 1]... r=me
WebKit Commit Bot
Comment 5
2010-10-14 12:22:58 PDT
Comment on
attachment 70368
[details]
Proposed patch [Update 1]... Clearing flags on attachment: 70368 Committed
r69791
: <
http://trac.webkit.org/changeset/69791
>
WebKit Commit Bot
Comment 6
2010-10-14 12:23:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug