2010-10-14  Dawit Alemayehu  <adawit@kde.org>

Reviewed by Andreas Kling.

        Fix compile error when bulding webkit's Qt port using the "--v8" option.
        https://bugs.webkit.org/show_bug.cgi?id=47455

        * platform/qt/PlatformBridge.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@69791 bbb929c8-8fbe-4397-9dbb-9b2b20218538