third_party/WebKit/WebCore/platform/qt/PlatformBridge.h
@@ -28,7 +28,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #define PlatformBridge_h
 
 #include "KURL.h"
-#include "npapi.h"
 #include "PlatformString.h"
 
 #include <wtf/Vector.h>
@@ -78,7 +77,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
    static_cast<size_t>(!(sizeof(a) % sizeof(*(a)))))
 
 
-class NPObject;
+typedef struct NPObject NPObject;
+typedef struct _NPP NPP_t;
+typedef NPP_t* NPP;
 
 namespace WebCore {
 
